[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kev_checker"
authors = [
    {name = "Omar Santos, Charles Ezell III"},
]
description = "A basic Python program to check Cybersecurity & Infrastructure Security Agency (CISA) Known Exploited Vulnerabilities (KEV) Catalog"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["CISA", "CVE", "Known Exploited Vulnerabilities", "KEV", "Vulnerabilities"]
license = {text = "BSD-2-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]
dependencies = [
    "argparse",
    "pandas",
    "requests",
]
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kev_checker"]

[project.scripts]
kev-checker = "kev_checker:main"
